Submit button fixed

--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,7 @@
     <a href="https://discord.gg/mrjrVXB">Discord</a>
     <hr>
     <h4>Contact Us</h4>
-    <form class="" action="mailto:livecraftpubg@gmail.com" method="post">
+    <form action="mailto:livecraftpubg@gmail.com" method="post" enctype="text/plain">
       <table>
         <tr>
           <td><label>Your Name:</label></td>
