--- a/homepage.html
+++ b/homepage.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>LiveCraft - Evolving eSports</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <img src="LiveCraft Logo.png" alt="LiveCraft logo" height="80"><hr>
-    <h3>About Us</h3>
-    <p>LiveCraft is an Independent Organisation who works for betterment of eSports.</p>
-    <p>We organise daily practice customs and from underdogs to elites, everyone takes part. We have a diverse schedule where every performer gets a chance to fight against Elites, so that they would learn more.</p>
-    <p>We think that for a profession, practice should be done professionally too. So for practice customs, we provide regular Points Table so that teams could know where they stand and improve. Also we keep most of the matches off stream, so that teams can play freely and without fearing of stream snipe or of strategy reveal.</p>
-    <p>We are working on many projects which will benefit community as well as they will have more practice with tournament mindset. We believe practice should be provided to every player out there in India, who wants to be a part of eSports. Join with us in our initiative.</p>
+    <img src="LiveCraft Logo.png" alt="LiveCraft logo">
+    <h2>About Us</h2>
+    <p>LiveCraft is an Esport Organisation which believe in bringing up change in an Esport World . The name  LiveCraft  is represented by two characters , the top character ,"Live," means something which is real or alive , while the bottom character ,"Craft,"  an activity involving skills . Our mission is to bring Esports into every household .
+</p>
     <hr>
     <h4>Follow us at:</h4>
     <a href="https://www.youtube.com/channel/UCESJtpg4IKsGMprlxAw5x2w?sub_confirmation=1">YouTube</a><br>
@@ -38,7 +37,7 @@
         </tr>
         <tr>
           <td></td>
-          <td><input type="submit" name="send message" value="Submit"></td>
+          <td><input type="submit" name="" value="Submit"></td>
         </tr>
       </table>
     </form>
