--- a/homepage.html
+++ b/homepage.html
@@ -1,45 +1,51 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>LiveCraft - Evolving eSports</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-    <img src="LiveCraft Logo.png" alt="LiveCraft logo">
-    <h2>About Us</h2>
-    <p>LiveCraft is an Esport Organisation which believe in bringing up change in an Esport World . The name  LiveCraft  is represented by two characters , the top character ,"Live," means something which is real or alive , while the bottom character ,"Craft,"  an activity involving skills . Our mission is to bring Esports into every household .
-</p>
-    <hr>
-    <h4>Follow us at:</h4>
-    <a href="https://www.youtube.com/channel/UCESJtpg4IKsGMprlxAw5x2w?sub_confirmation=1">YouTube</a><br>
-    <a href="https://www.instagram.com/livecraft_in/">Instagram</a><br>
-    <a href="https://discord.gg/mrjrVXB">Discord</a>
-    <hr>
-    <h4>Contact Us</h4>
-    <form action="mailto:livecraftpubg@gmail.com" method="post" enctype="text/plain">
-      <table>
-        <tr>
-          <td><label>Your Name:</label></td>
-          <td><input type="text" name="Name" value=""></td>
-        </tr>
-        <tr>
-          <td><label>Your IGN:</label></td>
-          <td><input type="text" name="IGN" value=""></td>
-        </tr>
-        <tr>
-          <td><label>Contact Number:</label></td>
-          <td><input type="number" name="" value=""><br></td>
-        </tr>
-        <tr>
-          <td><label>Your Message:</label></td>
-          <td><textarea name="Feedback Message" rows="10" cols="30"></textarea></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><input type="submit" name="" value="Submit"></td>
-        </tr>
-      </table>
-    </form>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>LiveCraft - Evolving eSports</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+  <img src="LiveCraft Logo.png" alt="LiveCraft logo">
+  <iframe width="420" height="315" src="https://www.youtube.com/watch?v=ikBglkG_u4Y&t=19s">
+  </iframe>
+  <h2>About Us</h2>
+  <p>LiveCraft is an Esport Organisation which believe in bringing up change in an Esport World . The name LiveCraft is represented by two characters , the top character ,"Live," means something which is real or alive , while the bottom character
+    ,"Craft," an activity involving skills . Our mission is to bring Esports into every household .
+  </p>
+  <hr>
+  <h4>Follow us at:</h4>
+  <a href="https://www.youtube.com/channel/UCESJtpg4IKsGMprlxAw5x2w?sub_confirmation=1">YouTube</a><br>
+  <a href="https://www.instagram.com/livecraft_in/">Instagram</a><br>
+  <a href="https://discord.gg/mrjrVXB">Discord</a>
+  <hr>
+  <h4>Contact Us</h4>
+  <form action="mailto:livecraftpubg@gmail.com" method="post" enctype="text/plain">
+    <table>
+      <tr>
+        <td><label>Your Name:</label></td>
+        <td><input type="text" name="Name" value=""></td>
+      </tr>
+      <tr>
+        <td><label>Your IGN:</label></td>
+        <td><input type="text" name="IGN" value=""></td>
+      </tr>
+      <tr>
+        <td><label>Contact Number:</label></td>
+        <td><input type="number" name="" value=""><br></td>
+      </tr>
+      <tr>
+        <td><label>Your Message:</label></td>
+        <td><textarea name="Feedback Message" rows="10" cols="30"></textarea></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><input type="submit" name="" value="Submit"></td>
+      </tr>
+    </table>
+  </form>
+</body>
+
 </html>
