--- a/homepage.html
+++ b/homepage.html
@@ -9,8 +9,7 @@
 
 <body>
   <img src="LiveCraft Logo.png" alt="LiveCraft logo">
-  <iframe width="420" height="315" src="https://www.youtube.com/watch?v=ikBglkG_u4Y&t=19s">
-  </iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ikBglkG_u4Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <h2>About Us</h2>
   <p>LiveCraft is an Esport Organisation which believe in bringing up change in an Esport World . The name LiveCraft is represented by two characters , the top character ,"Live," means something which is real or alive , while the bottom character
     ,"Craft," an activity involving skills . Our mission is to bring Esports into every household .
