Registration and Youtube links added

--- a/homepage.html
+++ b/homepage.html
@@ -9,6 +9,12 @@
 
 <body>
   <img src="LiveCraft Logo.png" alt="LiveCraft logo">
+  <hr style="border-width: 0px;">
+  <h3>LiveCraft Echelon Practice Customs</h3>
+  <a href="registration.html">Register Now</a>
+  <h2 style="text-align: left; margin-left: 3%">Prestige Cup</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/KqBjuY3d_fA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <h2 style="text-align: left; margin-left: 3%">Prestige Cup 2.0</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/ikBglkG_u4Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <h2>About Us</h2>
   <p>LiveCraft is an Esport Organisation which believe in bringing up change in an Esport World . The name LiveCraft is represented by two characters , the top character ,"Live," means something which is real or alive , while the bottom character
