--- a/registration.html
+++ b/registration.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Echelon Registration</title>
   </head>
   <body>
     <script type="text/javascript" src="https://form.jotform.me/jsform/93323071259455"></script>
