Updated Discord Invite

--- a/homepage.html
+++ b/homepage.html
@@ -24,7 +24,7 @@
   <h4>Follow us at:</h4>
   <a href="https://www.youtube.com/channel/UCESJtpg4IKsGMprlxAw5x2w?sub_confirmation=1">YouTube</a><br>
   <a href="https://www.instagram.com/livecraft_in/">Instagram</a><br>
-  <a href="https://discord.gg/mrjrVXB">Discord</a>
+  <a href="https://discord.gg/Re5NvHn">Discord</a>
   <hr>
   <h4>Contact Us</h4>
   <form action="mailto:livecraftpubg@gmail.com" method="post" enctype="text/plain">
