Last date to register added

--- a/homepage.html
+++ b/homepage.html
@@ -11,6 +11,7 @@
   <img src="LiveCraft Logo.png" alt="LiveCraft logo">
   <hr style="border-width: 0px;">
   <h3>LiveCraft Echelon Practice Customs</h3>
+  <h3>(Last Date to apply - 21/12/2019)</h3>
   <a href="https://forms.gle/3Q27zkYQtK7NJAbm8">Register Now</a>
   <h2 style="text-align: left; margin-left: 3%">Prestige Cup</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/KqBjuY3d_fA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
