--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
   <img src="LiveCraft Logo.png" alt="LiveCraft logo">
   <hr style="border-width: 0px;">
   <h3>LiveCraft Echelon Practice Customs</h3>
-  <h3>Registrations are over, Final list will be here soon.</h3>
+  <p>Registrations are over, Final list will be here soon.</p>
   <h2 style="text-align: left; margin-left: 3%">Prestige Cup</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/KqBjuY3d_fA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <h2 style="text-align: left; margin-left: 3%">Prestige Cup 2.0</h2>
